--- a/src/VisualizationContainer.css
+++ b/src/VisualizationContainer.css
@@ -4,4 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  widows: 800px;
+  overflow: auto;
+  /*padding: 10px;*/
+}
+
+#containerDiv {
+  width: 100%;
 }
